--- a/index.html
+++ b/index.html
@@ -121,19 +121,27 @@
     <!-- HEADER -->
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
-            <td bgcolor="#ffffff">
+            <td bgcolor="#EEF1F5">
                 <div align="center" style="padding: 0px 15px 0px 15px;">
-                    <table border="0" cellpadding="0" cellspacing="0" width="500" class="wrapper">
+                    <table border="0" cellpadding="0" cellspacing="0" width="96%" class="wrapper">
                         <!-- LOGO/PREHEADER TEXT -->
                         <tr>
                             <td style="padding: 20px 0px 30px 0px;" class="logo">
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                     <tr>
-                                        <td bgcolor="#ffffff" width="100" align="left"><a href="http://alistapart.com/article/can-email-be-responsive/" target="_blank"><img alt="Logo" src="img/logo.jpg" width="52" height="78" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;" border="0"></a></td>
-                                        <td bgcolor="#ffffff" width="400" align="right" class="mobile-hide">
+                                        <td bgcolor="#ffffff" width="100%" align="center">
+                                            <a href="http://example.com/" target="_blank">
+                                                <img alt="Logo" src="https://s3.amazonaws.com/upperhand-dev/dev-exercises/generic-logo.jpg" width="40%" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;" border="0">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td bgcolor="#ffffff" width="100%" align="center">
                                             <table border="0" cellpadding="0" cellspacing="0">
                                                 <tr>
-                                                    <td align="right" style="padding: 0 0 5px 0; font-size: 14px; font-family: Arial, sans-serif; color: #666666; text-decoration: none;"><span style="color: #666666; text-decoration: none;">Salted - a responsive email template.<br>Use preheader text, seriously.</span></td>
+                                                    <td align="center" style="padding: 10px 0 10px 0; font-size: 40px; font-family: Arial, sans-serif; color: #707070; text-decoration: none;">
+                                                        <span style="color: #707070; text-decoration: none;">New bookings!</span>
+                                                    </td>
                                                 </tr>
                                             </table>
                                         </td>
@@ -150,7 +158,7 @@
     <!-- TWO COLUMN SECTION -->
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
-            <td bgcolor="#ffffff" align="center" style="padding: 70px 15px 70px 15px;" class="section-padding">
+            <td bgcolor="#EEF1F5" align="center" style="padding: 70px 15px 70px 15px;" class="section-padding">
                 <table border="0" cellpadding="0" cellspacing="0" width="500" class="responsive-table">
                     <tr>
                         <td>
@@ -267,7 +275,7 @@
     <!-- FOOTER -->
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
-            <td bgcolor="#ffffff" align="center">
+            <td bgcolor="#EEF1F5" align="center">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
                     <tr>
                         <td style="padding: 20px 0px 20px 0px;">
