added rest of header text

--- a/index.html
+++ b/index.html
@@ -128,19 +128,67 @@
                         <tr>
                             <td style="padding: 20px 0px 30px 0px;" class="logo">
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                                    <!-- HEADER LOGO -->
                                     <tr>
                                         <td bgcolor="#ffffff" width="100%" align="center">
                                             <a href="http://example.com/" target="_blank">
-                                                <img alt="Logo" src="https://s3.amazonaws.com/upperhand-dev/dev-exercises/generic-logo.jpg" width="40%" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;" border="0">
+                                                <img alt="Logo" src="https://s3.amazonaws.com/upperhand-dev/dev-exercises/generic-logo.jpg" width="36%" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;" border="0">
                                             </a>
+                                        </td>
+                                    </tr>
+                                    <!-- TITLE -->
+                                    <tr>
+                                        <td bgcolor="#ffffff" width="100%" align="center">
+                                            <table border="0" cellpadding="0" cellspacing="0">
+                                                <tr>
+                                                    <td align="center" style="padding: 10px 0 0 0; font-size: 36px; font-family: Arial, sans-serif; color: #707070; text-decoration: none;">
+                                                        <span style="color: #707070; text-decoration: none;">New bookings!</span>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                    <!-- LINE SEPARATOR -->
+                                    <tr>
+                                        <td bgcolor="#ffffff" width="100%" align="center">
+                                            <table border="0" cellpadding="0" cellspacing="0">
+                                                <tr>
+                                                    <td align="center" style="padding: 0; font-size: 40px; font-family: Arial, sans-serif; color: #EEF1F5; text-decoration: none;">
+                                                        <hr style="width: 40px; color: #EEF1F5;">
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                    <!-- HEADER TEXT -->
+                                    <tr>
+                                        <td bgcolor="#ffffff" width="100%" align="center">
+                                            <table border="0" cellpadding="0" cellspacing="0">
+                                                <tr>
+                                                    <td align="center" style="padding: 0; font-size: 16px; font-family: Arial, sans-serif; color: #AAAAAA; font-weight: bold; text-decoration: none;">
+                                                        <span style="color: #AAAAAA; text-decoration: none;">Event Type</span>
+                                                    </td>
+                                                </tr>
+                                            </table>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td bgcolor="#ffffff" width="100%" align="center">
                                             <table border="0" cellpadding="0" cellspacing="0">
                                                 <tr>
-                                                    <td align="center" style="padding: 10px 0 10px 0; font-size: 40px; font-family: Arial, sans-serif; color: #707070; text-decoration: none;">
-                                                        <span style="color: #707070; text-decoration: none;">New bookings!</span>
+                                                    <td align="center" style="padding: 0; font-size: 24px; font-family: Arial, sans-serif; color: #222222; font-weight: bold; text-decoration: none;">
+                                                        <span style="color: #222222; text-decoration: none;">Soccer Summer</span>
+                                                    </td>
+                                                </tr>
+                                            </table>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td bgcolor="#ffffff" width="100%" align="center">
+                                            <table border="0" cellpadding="0" cellspacing="0">
+                                                <tr>
+                                                    <td align="center" style="padding: 0; font-size: 20px; font-family: Arial, sans-serif; color: #707070; text-decoration: none;">
+                                                        <span style="color: #707070; text-decoration: none;">Monday, June 20 - Friday, June 24</span>
                                                     </td>
                                                 </tr>
                                             </table>
