adjusted header padding and line width

--- a/index.html
+++ b/index.html
@@ -122,15 +122,15 @@
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
             <td bgcolor="#EEF1F5">
-                <div align="center" style="padding: 0px 15px 0px 15px;">
+                <div align="center" style="padding: 0 15px 0 15px;">
                     <table border="0" cellpadding="0" cellspacing="0" width="96%" class="wrapper">
                         <!-- LOGO/PREHEADER TEXT -->
                         <tr>
-                            <td style="padding: 20px 0px 30px 0px;" class="logo">
+                            <td style="padding: 30px 0 30px 0;" class="logo">
                                 <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                     <!-- HEADER LOGO -->
                                     <tr>
-                                        <td bgcolor="#ffffff" width="100%" align="center">
+                                        <td style="padding: 30px 0 0 0;" bgcolor="#ffffff" width="100%" align="center">
                                             <a href="http://example.com/" target="_blank">
                                                 <img alt="Logo" src="https://s3.amazonaws.com/upperhand-dev/dev-exercises/generic-logo.jpg" width="36%" style="display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;" border="0">
                                             </a>
@@ -141,7 +141,7 @@
                                         <td bgcolor="#ffffff" width="100%" align="center">
                                             <table border="0" cellpadding="0" cellspacing="0">
                                                 <tr>
-                                                    <td align="center" style="padding: 10px 0 0 0; font-size: 36px; font-family: Arial, sans-serif; color: #707070; text-decoration: none;">
+                                                    <td align="center" style="padding: 18px 0 0 0; font-size: 36px; font-family: Arial, sans-serif; color: #707070; text-decoration: none;">
                                                         <span style="color: #707070; text-decoration: none;">New bookings!</span>
                                                     </td>
                                                 </tr>
@@ -154,7 +154,7 @@
                                             <table border="0" cellpadding="0" cellspacing="0">
                                                 <tr>
                                                     <td align="center" style="padding: 0; font-size: 40px; font-family: Arial, sans-serif; color: #EEF1F5; text-decoration: none;">
-                                                        <hr style="width: 40px; color: #EEF1F5;">
+                                                        <hr style="width: 36px; color: #EEF1F5;">
                                                     </td>
                                                 </tr>
                                             </table>
@@ -165,7 +165,7 @@
                                         <td bgcolor="#ffffff" width="100%" align="center">
                                             <table border="0" cellpadding="0" cellspacing="0">
                                                 <tr>
-                                                    <td align="center" style="padding: 0; font-size: 16px; font-family: Arial, sans-serif; color: #AAAAAA; font-weight: bold; text-decoration: none;">
+                                                    <td align="center" style="padding: 0 0 4px 0; font-size: 16px; font-family: Arial, sans-serif; color: #AAAAAA; font-weight: bold; text-decoration: none;">
                                                         <span style="color: #AAAAAA; text-decoration: none;">Event Type</span>
                                                     </td>
                                                 </tr>
@@ -187,7 +187,7 @@
                                         <td bgcolor="#ffffff" width="100%" align="center">
                                             <table border="0" cellpadding="0" cellspacing="0">
                                                 <tr>
-                                                    <td align="center" style="padding: 0; font-size: 20px; font-family: Arial, sans-serif; color: #707070; text-decoration: none;">
+                                                    <td align="center" style="padding: 0 0 30px 0; font-size: 20px; font-family: Arial, sans-serif; color: #707070; text-decoration: none;">
                                                         <span style="color: #707070; text-decoration: none;">Monday, June 20 - Friday, June 24</span>
                                                     </td>
                                                 </tr>
