removed two-column title section and padding

--- a/index.html
+++ b/index.html
@@ -206,21 +206,8 @@
     <!-- TWO COLUMN SECTION -->
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
-            <td bgcolor="#EEF1F5" align="center" style="padding: 70px 15px 70px 15px;" class="section-padding">
-                <table border="0" cellpadding="0" cellspacing="0" width="500" class="responsive-table">
-                    <tr>
-                        <td>
-                            <!-- TITLE SECTION AND COPY -->
-                            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-                                <tr>
-                                    <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333;" class="padding-copy">How does it work?</td>
-                                </tr>
-                                <tr>
-                                    <td align="center" style="padding: 20px 0 20px 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding-copy">Responsive email works on the same principles as RWD:</td>
-                                </tr>
-                            </table>
-                        </td>
-                    </tr>
+            <td bgcolor="#EEF1F5" align="center" style="padding: 0 15px 0 15px;" class="section-padding">
+                <table border="0" cellpadding="0" cellspacing="0" width="96%" class="responsive-table">
                     <tr>
                         <td>
                             <!-- TWO COLUMNS -->
