--- a/index.html
+++ b/index.html
@@ -314,11 +314,11 @@
                 <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
                     <tr>
                         <td style="padding: 20px 0px 20px 0px;">
-                            <!-- UNSUBSCRIBE COPY -->
+                            <!-- MANAGE EMAILS / UNSUBSCRIBE COPY -->
                             <table width="500" border="0" cellspacing="0" cellpadding="0" align="center" class="responsive-table">
                                 <tr>
                                     <td align="center" valign="middle" style="font-size: 12px; line-height: 18px; font-family: Helvetica, Arial, sans-serif; color:#666666;">
-                                        <span class="appleFooter" style="color:#666666;">1234 Main Street, Anywhere, MA 01234, USA</span><br><a class="original-only" style="color: #666666; text-decoration: none;">Unsubscribe</a><span class="original-only" style="font-family: Arial, sans-serif; font-size: 12px; color: #444444;">&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;</span><a style="color: #666666; text-decoration: none;">View this email in your browser</a>
+                                        <a href="http://example.com/" class="original-only" style="color: #888888;">manage emails</a><span class="original-only" style="font-family: Arial, sans-serif; font-size: 12px; color: #888888;">&nbsp;or&nbsp;</span><a href="http://example.com/" style="color: #888888;">unsubscribe</a>
                                     </td>
                                 </tr>
                             </table>
