added first half of footer (two columns)

--- a/index.html
+++ b/index.html
@@ -307,13 +307,84 @@
         </tr>
     </table>
 
+    <!-- TWO COLUMN SECTION (FOOTER) -->
+    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+        <tr>
+            <td bgcolor="#EEF1F5" align="center" style="padding: 0 60px 0 60px;" class="section-padding">
+                <table bgcolor="#EEF1F5" border="0" cellpadding="0" cellspacing="0" width="96%" class="responsive-table">
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="middle" style="padding: 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="25%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 20px 0 10px 0;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" bgcolor="#EEF1F5" valign="middle">
+                                                                <a href="http://example.com/" target="_blank">
+                                                                    <img src="https://s3.amazonaws.com/upperhand-dev/dev-exercises/UH_Logo_Web.png" width="74px" height="30px" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px;" alt="Upper Hand" border="0" class="img-max">
+                                                                </a>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="75%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 20px 0 10px 0;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="right" valign="middle" style="padding: 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; height: 30px;" bgcolor="#EEF1F5">
+                                                                <span style="font-weight: bold;">
+                                                                    <a href="http://example.com" style="color: #666666; text-decoration: none;">
+                                                                        Create New Event
+                                                                    </a>
+                                                                </span>
+                                                                <span style="color: #AAAAAA;">
+                                                                    &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+                                                                </span>
+                                                                <span style="font-weight: bold;">
+                                                                    <a href="http://example.com" style="color: #666666; text-decoration: none;">
+                                                                        Manage Events
+                                                                    </a>
+                                                                </span>
+                                                                <span style="color: #AAAAAA;">
+                                                                    &nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+                                                                </span>
+                                                                <span style="font-weight: bold;">
+                                                                    <a href="http://example.com" style="color: #666666; text-decoration: none;">
+                                                                        Calendar
+                                                                    </a>
+                                                                </span>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
     <!-- FOOTER -->
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
             <td bgcolor="#EEF1F5" align="center">
-                <table width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
+                <table width="96%" border="0" cellspacing="0" cellpadding="0" align="center">
                     <tr>
-                        <td style="padding: 20px 0px 20px 0px;">
+                        <td style="padding: 10px 0 120px 0;">
                             <!-- MANAGE EMAILS / UNSUBSCRIBE COPY -->
                             <table width="500" border="0" cellspacing="0" cellpadding="0" align="center" class="responsive-table">
                                 <tr>
