--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--
     File: index.html
     Author: Edward Ly
-    Last Modified: 29 December 2016
+    Last Modified: 3 January 2017
     Template: Salted, a responsive email template
     -->
     <meta charset="utf-8">
@@ -294,6 +294,190 @@
                                                             <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#FFFFFF"><span class="appleBody">Don&rsquo;t use images for buttons. There&rsquo;s a better way.</span></td>
                                                         </tr>
                                                     </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
+
+    <!-- TWO COLUMN SECTION (SCHEDULE) -->
+    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+        <tr>
+            <td bgcolor="#EEF1F5" align="center" style="padding: 15px 15px 0 15px;" class="section-padding">
+                <table bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" width="96%" class="responsive-table">
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS (HEADER) -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="top" style="padding: 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 24px 0 16px 30px;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" style="padding: ; font-family: Arial, sans-serif; color: #AAAAAA; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">Schedule</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 24px 30px 16px 0;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" style="padding: 0; font-family: Arial, sans-serif; color: #AAAAAA; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">Time</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS (EVENT 1) -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="top" style="padding: 0 0 16px 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 0 5px 30px;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" style="padding: 0; font-family: Arial, sans-serif; color: #444444; font-size: 14px; font-weight: bold;" bgcolor="#FFFFFF">Mon, Jun 20</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td align="left" style="padding: 6px 0 0 0; font-family: Arial, sans-serif; color: #444444; font-size: 13px;" bgcolor="#FFFFFF">Circle Stadium - Field B</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 30px 5px 0;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" style="padding: 0; font-family: Arial, sans-serif; color: #444444; font-size: 14px; font-weight: bold;" bgcolor="#FFFFFF">4:30p - 6:30p</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS (EVENT 2) -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="top" style="padding: 0 0 16px 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 0 5px 30px;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" style="padding: 0; font-family: Arial, sans-serif; color: #444444; font-size: 14px; font-weight: bold;" bgcolor="#FFFFFF">Tue, Jun 21</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td align="left" style="padding: 6px 0 0 0; font-family: Arial, sans-serif; color: #444444; font-size: 13px;" bgcolor="#FFFFFF">Circle Stadium - Field B</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 30px 5px 0;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" style="padding: 0; font-family: Arial, sans-serif; color: #444444; font-size: 14px; font-weight: bold;" bgcolor="#FFFFFF">4:30p - 6:30p</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS (EVENT 3) -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="top" style="padding: 0 0 16px 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 0 5px 30px;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" style="padding: 0; font-family: Arial, sans-serif; color: #444444; font-size: 14px; font-weight: bold;" bgcolor="#FFFFFF">Wed, Jun 22</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td align="left" style="padding: 6px 0 0 0; font-family: Arial, sans-serif; color: #444444; font-size: 13px;" bgcolor="#FFFFFF">Circle Stadium - Field B</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 30px 5px 0;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" style="padding: 0; font-family: Arial, sans-serif; color: #444444; font-size: 14px; font-weight: bold;" bgcolor="#FFFFFF">4:30p - 6:30p</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS (BOTTOM PADDING) -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="top" style="padding: 0 0 16px 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 0 5px 30px;">
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 30px 5px 0;">
                                                 </td>
                                             </tr>
                                         </table>
