added receipt header

--- a/index.html
+++ b/index.html
@@ -203,48 +203,41 @@
         </tr>
     </table>
 
-    <!-- TWO COLUMN SECTION -->
+    <!-- TWO COLUMN SECTION (RECEIPT 1) -->
     <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
             <td bgcolor="#EEF1F5" align="center" style="padding: 0 15px 0 15px;" class="section-padding">
                 <table bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" width="96%" class="responsive-table">
                     <tr>
                         <td>
-                            <!-- TWO COLUMNS -->
+                            <!-- TWO COLUMNS (HEADER) -->
                             <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                 <tr>
                                     <td valign="top" style="padding: 0;" class="mobile-wrapper">
                                         <!-- LEFT COLUMN -->
-                                        <table cellpadding="0" cellspacing="0" border="0" width="47%" align="left" class="responsive-table">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
                                             <tr>
-                                                <td style="padding: 20px 0 40px 0;">
+                                                <td style="padding: 20px 0 0 60px;">
                                                     <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                         <tr>
-                                                            <td align="center" bgcolor="#FFFFFF" valign="middle"><a href="http://alistapart.com/article/can-email-be-responsive/" target="_blank"><img src="img/fluid-images.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Fluid images" border="0" class="img-max"></a></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#FFFFFF">Fluid Images</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#FFFFFF"><span class="appleBody"><span style="font-family:Lucida Console, monospace;">max-width:100%</span> is your friend, just like on the web.</span></td>
+                                                            <td align="left" valign="middle" style="padding: 0; font-family: Arial, sans-serif; color: #AAAAAA; font-size: 16px; font-weight: bold; height: 30px;" bgcolor="#FFFFFF">Receipt</td>
                                                         </tr>
                                                     </table>
                                                 </td>
                                             </tr>
                                         </table>
                                         <!-- RIGHT COLUMN -->
-                                        <table cellpadding="0" cellspacing="0" border="0" width="47%" align="right" class="responsive-table">
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
                                             <tr>
-                                                <td style="padding: 20px 0 40px 0;">
+                                                <td style="padding: 20px 0 0 0;">
                                                     <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                         <tr>
-                                                            <td align="center" bgcolor="#FFFFFF" valign="middle"><a href="http://alistapart.com/article/can-email-be-responsive/" target="_blank"><img src="img/fluid-structure.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Fluid structures" border="0" class="img-max"></a></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#FFFFFF">Fluid Structure</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#FFFFFF"><span class="appleBody">You can use percentage-based tables, too. Don&rsquo;t touch <em>ems</em>, though.</span></td>
+                                                            <td align="left" bgcolor="#FFFFFF" valign="middle" width="30px" height="30px">
+                                                                <img src="https://pbs.twimg.com/profile_images/648080448501911552/04Mpb4JF.jpg" width="30" height="30" style="display: inline-block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 16px; width: 30px; height: 30px; border-radius: 50%; vertical-align:middle;" alt="Avatar" border="0" class="img-max">
+                                                            </td>
+                                                            <td align="left" bgcolor="#FFFFFF" valign="middle" height="30px">
+                                                                <span style="color: #444444; font-family: Helvetica, arial, sans-serif; font-size: 16px;">&nbsp;&nbsp;Jacob Barns</span>
+                                                            </td>
                                                         </tr>
                                                     </table>
                                                 </td>
@@ -255,48 +248,13 @@
                             </table>
                         </td>
                     </tr>
+                    <!-- LINE SEPARATOR -->
                     <tr>
-                        <td>
-                            <!-- TWO COLUMNS -->
-                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                        <td bgcolor="#FFFFFF" width="100%" align="center">
+                            <table width="100%" border="0" cellpadding="0" cellspacing="0">
                                 <tr>
-                                    <td valign="top" style="padding: 0;" class="mobile-wrapper">
-                                        <!-- LEFT COLUMN -->
-                                        <table cellpadding="0" cellspacing="0" border="0" width="47%" align="left" class="responsive-table">
-                                            <tr>
-                                                <td style="padding: 20px 0 40px 0;">
-                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                                                        <tr>
-                                                            <td align="center" bgcolor="#FFFFFF" valign="middle"><a href="http://alistapart.com/article/can-email-be-responsive/" target="_blank"><img src="img/media-queries.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Media queries" border="0" class="img-max"></a></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#FFFFFF">Media Queries</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#FFFFFF"><span class="appleBody">They don&rsquo;t work everywhere, but when they do&hellip;</span></td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                        <!-- RIGHT COLUMN -->
-                                        <table cellpadding="0" cellspacing="0" border="0" width="47%" align="right" class="responsive-table">
-                                            <tr>
-                                                <td style="padding: 20px 0 40px 0;">
-                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                                                        <tr>
-                                                            <td align="center" bgcolor="#FFFFFF" valign="middle"><a href="http://alistapart.com/article/can-email-be-responsive/" target="_blank"><img src="img/bulletproof-buttons.jpg" width="240" height="130" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px; height: 130px;" alt="Bulletproof buttons" border="0" class="img-max"></a></td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#FFFFFF">Bulletproof Buttons</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#FFFFFF"><span class="appleBody">Don&rsquo;t use images for buttons. There&rsquo;s a better way.</span></td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
+                                    <td align="center" style="padding: 0; font-size: 30px; font-family: Arial, sans-serif; color: #EEF1F5; text-decoration: none;">
+                                        <hr style="width: 90%; color: #EEF1F5;">
                                     </td>
                                 </tr>
                             </table>
@@ -324,7 +282,7 @@
                                                 <td style="padding: 24px 0 16px 30px;">
                                                     <table cellpadding="0" cellspacing="0" border="0" width="100%">
                                                         <tr>
-                                                            <td align="left" style="padding: ; font-family: Arial, sans-serif; color: #AAAAAA; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">Schedule</td>
+                                                            <td align="left" style="padding: 0; font-family: Arial, sans-serif; color: #AAAAAA; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">Schedule</td>
                                                         </tr>
                                                     </table>
                                                 </td>
