--- a/index.html
+++ b/index.html
@@ -248,13 +248,205 @@
                             </table>
                         </td>
                     </tr>
-                    <!-- LINE SEPARATOR -->
                     <tr>
                         <td bgcolor="#FFFFFF" width="100%" align="center">
+                            <!-- LINE SEPARATOR -->
                             <table width="100%" border="0" cellpadding="0" cellspacing="0">
                                 <tr>
                                     <td align="center" style="padding: 0; font-size: 30px; font-family: Arial, sans-serif; color: #EEF1F5; text-decoration: none;">
                                         <hr style="width: 90%; color: #EEF1F5;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS (EVENT/PRICE) -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="top" style="padding: 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 0 0 0 60px;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">Event</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td align="left" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px;" bgcolor="#FFFFFF">Soccer Summer Camp</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td>
+                                                    <!-- TWO COLUMNS (PRICE) -->
+                                                    <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td valign="top" style="padding: 0 60px 0 0;" class="mobile-wrapper">
+                                                                <!-- LEFT COLUMN -->
+                                                                <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                                                    <tr>
+                                                                        <td style="padding: 0;">
+                                                                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                                                <tr>
+                                                                                    <td align="left" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">Qty</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="left" valign="middle" style="padding: 0 0 24px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px;" bgcolor="#FFFFFF">1</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="left" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px;" bgcolor="#FFFFFF">Subtotal</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="left" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px;" bgcolor="#FFFFFF">Discount</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="left" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px;" bgcolor="#FFFFFF">Savings</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="left" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">Total</td>
+                                                                                </tr>
+                                                                            </table>
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
+                                                                <!-- RIGHT COLUMN -->
+                                                                <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                                                    <tr>
+                                                                        <td style="padding: 0;">
+                                                                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                                                <tr>
+                                                                                    <td align="right" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">Price</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="right" valign="middle" style="padding: 0 0 24px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px;" bgcolor="#FFFFFF">$100</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="right" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px;" bgcolor="#FFFFFF">$100</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="right" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #5DD979; font-size: 16px;" bgcolor="#FFFFFF">0%</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="right" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #5DD979; font-size: 16px;" bgcolor="#FFFFFF">$0.00</td>
+                                                                                </tr>
+                                                                                <tr>
+                                                                                    <td align="right" valign="middle" style="padding: 0 0 6px 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px; font-weight: bold;" bgcolor="#FFFFFF">$100</td>
+                                                                                </tr>
+                                                                            </table>
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS (PAYMENT) -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="top" style="padding: 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 6px 0 0 60px;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" valign="middle" style="padding: 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px; font-weight: bold; height: 30px;" bgcolor="#FFFFFF">Payment Method</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 6px 0 0 0;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" bgcolor="#FFFFFF" valign="middle" height="30px">
+                                                                <span style="color: #444444; font-family: Helvetica, arial, sans-serif; font-size: 16px;">Card</span>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td bgcolor="#FFFFFF" width="100%" align="center">
+                            <!-- LINE SEPARATOR -->
+                            <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                                <tr>
+                                    <td align="center" style="padding: 0; font-size: 30px; font-family: Arial, sans-serif; color: #EEF1F5; text-decoration: none;">
+                                        <hr style="width: 90%; color: #EEF1F5;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <!-- TWO COLUMNS (CONTACT) -->
+                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                <tr>
+                                    <td valign="top" style="padding: 0;" class="mobile-wrapper">
+                                        <!-- LEFT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="55%" align="left" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 6px 0 0 60px;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" valign="middle" style="padding: 0; font-family: Arial, sans-serif; color: #333333; font-size: 16px; font-weight: bold; height: 30px;" bgcolor="#FFFFFF">Contact Client</td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <!-- RIGHT COLUMN -->
+                                        <table cellpadding="0" cellspacing="0" border="0" width="45%" align="right" class="responsive-table">
+                                            <tr>
+                                                <td style="padding: 6px 0 0 0;">
+                                                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                                                        <tr>
+                                                            <td align="left" bgcolor="#FFFFFF" valign="middle" style="padding: 0 0 6px 0;">
+                                                                <span style="color: #444444; font-family: Helvetica, arial, sans-serif; font-size: 16px;">Jacob Barns</span>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td align="left" bgcolor="#FFFFFF" valign="middle" style="padding: 0 0 6px 0;">
+                                                                <span style="color: #444444; font-family: Helvetica, arial, sans-serif; font-size: 16px;">317.55.6013</span>
+                                                            </td>
+                                                        </tr>
+                                                        <tr>
+                                                            <td align="left" bgcolor="#FFFFFF" valign="middle" style="padding: 0 0 30px 0;">
+                                                                <span style="color: #444444; font-family: Helvetica, arial, sans-serif; font-size: 16px;">
+                                                                    <a href="mailto:the_jb3@example.com" style="color: #444444; text-decoration: none;">the_jb3@example.com</a>
+                                                                </span>
+                                                            </td>
+                                                        </tr>
+                                                    </table>
+                                                </td>
+                                            </tr>
+                                        </table>
                                     </td>
                                 </tr>
                             </table>
